# utils

./: README.md  README_daemon.md  add_chrome_maintenance.sh  advanced_fs_monitor.py  autonomous_learning.py  autonomous_system.py  backup_verification.sh  chrome_process_manager.py  claude_executor.py  code_metrics.json  comprehensive_risk_assessment.py  continuous_fs_monitor.sh  create_memories_table.sql  create_task_tables.sql  cron_scheduler.py  crontab_entry.txt  debug_task_daemon.py  discovered_accounts.json  email_automation.py  email_setup_guide.md  file_system_monitor.py  filesystem_monitor.py  find_accounts_to_follow.py  fs_activity_monitor.py  fs_monitor.py  fs_monitor_report.py  git_auto_commit.sh  github_automation.py  gmail_automation.py  health_tracking.py  improvement_plan.json  improvements_log.json  learning_log.json  memory.sh  memory_cleanup.sh  memory_manager.py  migrate_to_error_handler.py  optimize_venv.py  perplexity_browser_research.py  perplexity_finance_research.py  (+69 more)
data/: cron_tasks.json
data/finance_research/: research_queries.json
data/gmail/: auto_responses.json
data/health/: health_log.json
data/learning/: learning_insights.json  learning_progress.json
data/portfolio/: ethereum_portfolio_20250720_173712.json  ethereum_portfolio_20250720_173719.json  solana_portfolio_20250720_173712.json  (+1 more)
portfolio_data/: holdings.json  rebalancing_report_20250710_101602.txt  rebalancing_report_20250710_103721.txt  rebalancing_report_20250710_191033.txt  risk_assessment_20250710_191158.txt  target_allocations.json
